# tbbrdet_api

./: .gitignore  .gitmodules  .stestr.conf  Jenkinsfile  LICENSE  README.md  bandit.yaml  deployment_setup.sh  install_TBBRDet.sh  metadata.json  rclone_setup.sh  requirements-test.txt  requirements.txt  setup.cfg  sqa-init.sh  tox.ini  tox_setup.sh
.sqa/: config-gpu.yml  config.yml  docker-compose.yml
docker/: Dockerfile  Dockerfile.base  Dockerfile.cicd
tbbrdet_api/: api.py  fields.py  misc.py
tbbrdet_api/configs/: __init__.py  settings.ini
tbbrdet_api/scripts/: execute_inference.sh  execute_train_evaluate.sh  infer.py  train.py
tbbrdet_api/tests/: test_api.py
