# -*- coding: utf-8 -*-
[metadata]
name = tbbrdet_api
summary = Deepaas API for TBBRDet Model
description-file =
    README.md
author = Elena Vollmer
author-email = elena.vollmer@kit.edu
version = 0.0.1
license = BSD-3-Clause
home-page = https://github.com/emvollmer/tbbrdet_api
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    tbbrdet_api

[entry_points]
deepaas.v2.model =
    tbbrdet_api = tbbrdet_api.api
